--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,8 +1,15 @@
 Changelog for Actors
 ====================
 
-Version v1.0.0
---------------
+Version 1.1.0 - OSGi bundle
+---------------------------
+
+*   The JAR is also an OSGi bundle.
+*   Update Copyright.
+
+
+Version 1.0.0 - First release
+-----------------------------
 
 *   Add `Actor`
 *   Add `JavaFxActor`
